--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -19,17 +19,6 @@ jobs:
         with:
           hugo-version: '0.68.3'
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install requests pyyaml
-
-      - name: Fetch GitHub stars
-        run: |
-          python scripts/fetch-github-stars.py data/projects.yml
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
       - name: Build
         run: hugo --minify
 
@@ -38,6 +27,6 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: gh-pages  # deploying branch
-          cname: zerodha.tech
+          cname: blog.akashgirme.com
           user_name: 'github-actions[bot]'
           user_email: 'github-actions[bot]@users.noreply.github.com'
